Fixing button being visible through popup

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -243,7 +243,6 @@ body{
     margin-top: 5rem;
     margin-bottom: 2rem;
     position: relative;
-    /* z-index: -1; */
 }
 
 .futurecontainer {
@@ -360,6 +359,7 @@ body{
 .overlay:target {
     visibility: visible;
     opacity: 1;
+    z-index: 1;
 }
 
 .popup {
@@ -557,7 +557,7 @@ body{
     }
 }
 
-@media (orientation: Landscape) {
+@media (max-width: 768px) and (orientation: Landscape) {
     .popup {
         margin: 75px auto;
         padding: 20px;
